@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2048 2011/11/28 12:25:24 mb Exp $
+# $Id: CHANGES,v 1.2049 2011/11/28 12:28:37 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.1.0 beta2 ????-??-??
+ - 2011-11-28 Updated CPAN module Apache::DBI to version 1.11.
  - 2011-11-28 Updated CPAN module Mozilla::CA to version 20111025.
  - 2011-11-26 Added ReferenceData object that provides ISO-3166 country codes.
     Could be extend to contain other data later.
@@ -161,6 +162,7 @@
      of > 70 characters exists.
 
 3.0.12 ????-??-??
+ - 2011-11-28 Updated CPAN module Apache::DBI to version 1.11.
  - 2011-11-23 Fixed bug#7930 - Depreciation warnings in error log when running OTRS on
     Perl 5.14.
  - 2011-11-21 Fixed bug#3804 - Stats in Bar or Pie chart formats don't display non-
